--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
     background-color: #E4F6F6;
     position: relative;
     padding-top: 100px;
+   
+    
     
 
 }
@@ -32,6 +34,11 @@ h2 {
 h3 {
     font-family: 'Montserrat', sans-serif;
     color: #11999E;
+    font-weight: bold;
+    font-size: 20px;
+    padding-bottom: 0px;
+    padding-top: 10px;
+    margin-bottom: 0px;
      
 
 }
@@ -49,10 +56,11 @@ hr {
     margin: 50px auto 40px auto;
     font-family: 'Sacramento', cursive;
     line-height: 2rem;
+    font-weight: bold;
 
     
     
-    font-size: 5.265rem;
+    font-size: 5.5rem;
 }
 
  
@@ -116,14 +124,20 @@ hr {
 .footer-link {
     color: #11999E;
 }
-.skill-row {
+.skill-row2 {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
     line-height: 2;
     
 }
-
+.skill-row1 {
+    width: 50%;
+    margin: 85px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+    
+}
 
 /*********************************** btn starts *******************************************/
 
@@ -141,8 +155,9 @@ hr {
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 20px;
-    padding: 10px 20px 10px 20px;
+    padding: 5px 10px 10px 10px;
     text-decoration: none;
+    
     
   }
   
@@ -162,17 +177,20 @@ hr {
 
   .profile {
     line-height: 2;
-    padding-bottom: 60px;
+    padding-bottom: 70px;
     width: 50%;
     margin: auto;
 }
 
 .skills {
-    margin-top: 5rem;
+    margin-top: 5.1rem;
 }
 .myskills {
     font-weight: bolder;
     font-size: xx-large;
+    padding-bottom: 0px;
+    margin-bottom: 2.4375rem;
+    
 }
 .bottom-container{
     height: 100px;
@@ -183,7 +201,7 @@ hr {
 }
 .contact-me {
     width: 50%;
-    margin: 50px auto 35px auto;
+    margin: 70px auto 35px auto;
     line-height: 2;
 }
 .copyright {
@@ -201,4 +219,48 @@ a {
 
 a:hover {
     color: #EAF6F6;
+}
+.middle-container {
+    line-height: 2;
+} 
+.middle-container-1 {
+    padding-top: 10px;
+}
+.middle-container-2 {
+     margin: 20px auto 10px auto;
+      
+}
+.hello {
+    font-size: 35px;
+    font-weight: bold;
+}
+.hra {
+    border-color: #5cbfbf;
+    width: 13%;
+    border-style: dotted none none none;
+     
+     
+    border-width: 10px;
+    margin: auto;
+    
+}
+.myskills-1 {
+    padding-top: 10px;
+    margin-bottom: 0;
+}
+.btn {
+    height: 40px;
+    width: 160px;
+}
+.myskills-1 {
+    padding-top: 1.2em;
+}
+
+.navbar {
+    background-color: #66BFBF !important;
+    height: 4.375rem !important;
+    width: auto !important;
+}
+.bootstrap {
+    margin-left: 50px;
 }
