--- a/css/styles.css
+++ b/css/styles.css
@@ -264,3 +264,56 @@ a:hover {
 .bootstrap {
     margin-left: 50px;
 }
+
+/**************** 404 error page starts ***************************/
+
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+    padding: 40px 0;
+    background: #ffffff !important;
+    font-family: "Arvo", serif;
+  }
+  
+  .page_404 img {
+    width: 100%;
+  }
+  
+  .four_zero_four_bg {
+    background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    height: 400px;
+    background-position: center;
+    background-color: #66BFBF !important;
+  }
+  
+  .four_zero_four_bg h1 {
+    font-size: 80px;
+  }
+  
+  .four_zero_four_bg h3 {
+    font-size: 80px;
+  }
+  
+  .link_404 {
+    color: rgb(255, 255, 255) !important;
+    padding: 10px 20px;
+    background: #4ea749;
+    margin: 20px 0;
+    display: inline-block;
+    border-radius: 10%;
+    text-decoration: none !important;
+  }
+  .link_404:hover {
+    color: #000000 !important;
+    background: #11fd00;
+  }
+  .contant_box_404 {
+    margin-top: -50px;
+  }
+  .text-center {
+    color: black !important;
+  }
+
+  /************************* 404 error page ends ****************/
