--- a/css/styles.css
+++ b/css/styles.css
@@ -88,9 +88,9 @@ hr {
     top: 21px;
 }
 .profilephoto {
-    height: 160px;
-    width: 160px;
-    border-radius: 50%;
+    margin: auto;
+   
+     
 }
 .skillsphoto {
      
@@ -169,6 +169,7 @@ hr {
     background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
     background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
     text-decoration: none;
+    color: #ffffff;
   }
 
 
@@ -320,4 +321,116 @@ a:hover {
 
 .navbar-nav {
     margin-right: 20px !important;
+}
+.service-container-1 {
+     
+      
+    background-color: #EAF6F6;
+    margin-top: 0;
+    padding-top: 30px;
+    margin-right: 0;
+    height: 30rem;
+}
+
+.heading1 {
+    
+    margin: 270px auto 20px auto;
+    font-family: 'Sacramento', cursive;
+    line-height: 2rem;
+    font-weight: bold;
+
+    
+    
+    font-size: 8rem;
+}
+.sub-heading1 {
+    font-size: 2rem;
+    margin: 50px auto 10px 20px;
+}
+.lottie-animation {
+    margin: 80px auto auto auto;
+    float: left;
+
+}
+.service-container-h2 {
+    padding-top: 8rem;
+    margin: auto;
+    color: #034794;
+    font-weight: bold;
+    margin-top: 70px;
+}
+ 
+.service-container-1-1{
+    margin: 45px 220px;
+
+
+}
+ 
+.service-container-1-1-1-image {
+    float: left;
+    margin-left: 80px;
+    margin-top: 10px;
+
+}
+.service-container-1-h3-1 {
+    font-size: 2rem;
+    margin-right: 70px;
+}
+.service-container-1-h3-2 {
+    font-size: 2rem;
+    margin-right: -320px;
+}
+.service-container-1-h3-3 {
+    font-size: 2rem;
+     margin-right: 96px;
+}
+.service-container-1-h3-4 {
+    font-size: 2rem;
+    margin-right: -120px;
+}
+.service-container-1-h3-5{
+    font-size: 2rem;
+    margin-right: 30px;
+
+}
+.service-container-1-1-2-image {
+    float: left;
+    margin-left: -40px;
+    margin-top: 10px;
+}
+.service-container-1-1-3-image {
+    float: left;
+    margin-left: 80px;
+    margin-top: 10px;
+}
+.service-container-1-1-4-image {
+    float: left;
+    margin-left: -40px;
+    margin-top: 10px;
+} 
+.service-container-1-1-5-image {
+    float: left;
+   margin-left: 80px;
+   margin-top: 10px;
+} 
+.service-container-hr {
+    width: 15%;
+    border-color: #11fd00;
+    border-style: none;
+    border-top-style: dotted ;
+    margin: 150px auto;
+}
+.service-container-1-lottie {
+    position: absolute;
+    right: 1rem;
+    top: 19rem;
+
+}
+.service-container-2-lottie {
+    position: absolute;
+    top: 19rem;
+     
+     
+   
+
 }
