--- a/css/styles.css
+++ b/css/styles.css
@@ -322,115 +322,49 @@ a:hover {
 .navbar-nav {
     margin-right: 20px !important;
 }
-.service-container-1 {
-     
-      
+
+
+/* intro */
+
+#intro {
     background-color: #EAF6F6;
-    margin-top: 0;
-    padding-top: 30px;
-    margin-right: 0;
-    height: 30rem;
+     padding: 5% 5%;
+     height: fit-content;
+     
 }
 
 .heading1 {
-    
-    margin: 270px auto 20px auto;
+    margin: 130px 20px 40px auto;
     font-family: 'Sacramento', cursive;
     line-height: 2rem;
-    font-weight: bold;
+    font-weight: bolder;
+    margin-left: rem;
 
     
     
     font-size: 8rem;
 }
 .sub-heading1 {
-    font-size: 2rem;
-    margin: 50px auto 10px 20px;
-}
-.lottie-animation {
-    margin: 80px auto auto auto;
-    float: left;
-
-}
-.service-container-h2 {
-    padding-top: 8rem;
-    margin: auto;
-    color: #034794;
+    font-family: 'Montserrat';
     font-weight: bold;
-    margin-top: 70px;
-}
- 
-.service-container-1-1{
-    margin: 45px 220px;
-
+    font-size: 1.6rem;
+    margin-top: 3rem;
 
 }
- 
-.service-container-1-1-1-image {
-    float: left;
-    margin-left: 80px;
-    margin-top: 10px;
-
+.intro-animation1 {
+    position: relative;
+    top: 4rem;
+    padding-bottom: 0;
 }
-.service-container-1-h3-1 {
-    font-size: 2rem;
-    margin-right: 70px;
-}
-.service-container-1-h3-2 {
-    font-size: 2rem;
-    margin-right: -320px;
-}
-.service-container-1-h3-3 {
-    font-size: 2rem;
-     margin-right: 96px;
-}
-.service-container-1-h3-4 {
-    font-size: 2rem;
-    margin-right: -120px;
-}
-.service-container-1-h3-5{
-    font-size: 2rem;
-    margin-right: 30px;
-
-}
-.service-container-1-1-2-image {
-    float: left;
-    margin-left: -40px;
-    margin-top: 10px;
-}
-.service-container-1-1-3-image {
-    float: left;
-    margin-left: 80px;
-    margin-top: 10px;
-}
-.service-container-1-1-4-image {
-    float: left;
-    margin-left: -40px;
-    margin-top: 10px;
-} 
-.service-container-1-1-5-image {
-    float: left;
-   margin-left: 80px;
-   margin-top: 10px;
-} 
-.service-container-hr {
-    width: 15%;
-    border-color: #11fd00;
-    border-style: none;
-    border-top-style: dotted ;
-    margin: 150px auto;
-}
-.service-container-1-lottie {
-    position: absolute;
-    right: 1rem;
-    top: 19rem;
-
-}
-.service-container-2-lottie {
-    position: absolute;
-    top: 19rem;
+.intro-animation2 {
+    position: relative;
+    top: 4rem;
+    left: 3.8rem;
+    padding-bottom: 0;
      
+}
+.intro-box {
      
-   
-
+    padding-bottom: 0;
+    
 }
